--- a/partials/header.html
+++ b/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="brand" href="./" aria-label="Maskun Kauppakeskus">
       <img src="./assets/logo.png"
-           srcset="./assets/logo.png 1x, ./assets/logo@2x.png 2x"
+           srcset="./assets/logo.png"
            alt="Maskun Kauppakeskus" decoding="async" loading="eager"><b>Maskun Kauppakeskus</b>
     </a>
     <nav id="nav">
