--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,8 @@
+<div id="page-bg" aria-hidden="true"></div>
 <header class="site-header header">
+  
   <div class="header-container container">
+    
     <!-- Brändi / logo -->
     <a class="brand logo" href="./" aria-label="Maskun Kauppakeskus">
       <img
