Korjattu tyylejä ja pohdittu uudelleen rakennetta.

--- a/partials/header.html
+++ b/partials/header.html
@@ -32,7 +32,7 @@
         <!-- NAV:START -->
         <li role="none"><a role="menuitem" href="./#tenants">Liikkeet &amp; palvelut</a></li>
         <li role="none"><a role="menuitem" href="./info-pysakointi.html">Pysäköinti</a></li>
-        <li role="none"><a role="menuitem" href="./info-saapuminen.html">Saapuminen</a></li>
+        <li role="none"><a role="menuitem" href="./#location">Saapuminen</a></li>
         <li role="none"><a role="menuitem" href="./info-yhteystiedot.html">Yhteystiedot</a></li>
         <li role="none"><a role="menuitem" href="./info-liiketilavuokraus.html">Liiketilavuokraus</a></li>
         <!-- NAV:END -->
