--- a/partials/header.html
+++ b/partials/header.html
@@ -30,6 +30,7 @@
     <nav class="nav" aria-label="Päävalikko">
       <ul class="nav-links" id="nav-primary" role="menu">
         <!-- NAV:START -->
+                 <li role="none"><a role="menuitem" href="./#hours">Aukioloajat</a></li>
         <li role="none"><a role="menuitem" href="./#tenants">Liikkeet &amp; palvelut</a></li>
         <li role="none"><a role="menuitem" href="./info-pysakointi.html">Pysäköinti</a></li>
         <li role="none"><a role="menuitem" href="./#location">Saapuminen</a></li>
